// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AuthForm AuthForm view 1`] = `
<div
  className="overlay"
>
  <div
    className="item"
  >
    <p>
      To use the Search Party tool, you must be logged in to USCIS.
    </p>
    <p>
      <a
        className="usa-button usa-button--primary"
        href="#test-link"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-user-circle fa-w-16 "
          data-icon="user-circle"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 496 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
          Log In to USCIS
      </a>
    </p>
  </div>
</div>
`;

exports[`Storyshots CaseList Case list while loading data 1`] = `
Array [
  <table
    className="usa-table usa-table--borderless width-full"
  >
    <thead>
      <tr>
        <th>
          header 1
        </th>
        <th>
          header 2
        </th>
        <th>
          header 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          foobar
        </td>
        <td>
          hello world
        </td>
        <td>
          abc
        </td>
      </tr>
      <tr>
        <td>
          foobar2
        </td>
        <td>
          hello world2
        </td>
        <td>
          abc2
        </td>
      </tr>
    </tbody>
  </table>,
  <div
    className="display-flex flex-column flex-align-center"
  >
    <button
      className="usa-button usa-button--outline"
      disabled={true}
      type="button"
    >
      Loading...
    </button>
  </div>,
]
`;

exports[`Storyshots CaseList Case list with some data 1`] = `
Array [
  <table
    className="usa-table usa-table--borderless width-full"
  >
    <thead>
      <tr>
        <th>
          header 1
        </th>
        <th>
          header 2
        </th>
        <th>
          header 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          foobar
        </td>
        <td>
          hello world
        </td>
        <td>
          abc
        </td>
      </tr>
      <tr>
        <td>
          foobar2
        </td>
        <td>
          hello world2
        </td>
        <td>
          abc2
        </td>
      </tr>
    </tbody>
  </table>,
  <div
    className="display-flex flex-column flex-align-center"
  >
    There are no more cases on this list.
  </div>,
]
`;

exports[`Storyshots CaseList Caselist with more cases to load 1`] = `
Array [
  <table
    className="usa-table usa-table--borderless width-full"
  >
    <thead>
      <tr>
        <th>
          header 1
        </th>
        <th>
          header 2
        </th>
        <th>
          header 3
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          foobar
        </td>
        <td>
          Hello world
        </td>
        <td>
          ABC
        </td>
      </tr>
      <tr>
        <td>
          foobar2
        </td>
        <td>
          Hello world2
        </td>
        <td>
          ABC2
        </td>
      </tr>
    </tbody>
  </table>,
  <div
    className="display-flex flex-column flex-align-center"
  >
    <button
      className="usa-button usa-button--outline"
      disabled={false}
      type="button"
    >
      Show More
    </button>
  </div>,
]
`;

exports[`Storyshots CaseList Empty case list 1`] = `
Array [
  <p>
    No cases found.
  </p>,
  <div
    className="display-flex flex-column flex-align-center"
  >
    There are no more cases on this list.
  </div>,
]
`;

exports[`Storyshots DesnoozedWarning Multiple desnoozed cases 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--warning usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      You have 20 reminders to review cases highlighted below.
       
    </p>
  </div>
</div>
`;

exports[`Storyshots DesnoozedWarning No desnoozed cases 1`] = `null`;

exports[`Storyshots DesnoozedWarning One desnoozed case 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--warning usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      You have 1 reminder to review a case highlighted below.
       
    </p>
  </div>
</div>
`;

exports[`Storyshots DetailNoteDisplay Assignee 1`] = `"Joe was assigned to follow-up on this case."`;

exports[`Storyshots DetailNoteDisplay General comment 1`] = `"This is a general comment."`;

exports[`Storyshots DetailNoteDisplay Trouble ticket 1`] = `
Array [
  "ServiceNow ticket ",
  <a
    href="http://localhost:1111/12345"
  >
    #
    12345
  </a>,
  " ",
  "was associated with this case.",
]
`;

exports[`Storyshots FormattedDate Last Refresh 1`] = `
<p>
  Last Refresh
  : 
  8/11/2014, 12:00:00 AM
</p>
`;

exports[`Storyshots ReceiptList Empty Receipt List 1`] = `
<p>
  No cases found.
</p>
`;

exports[`Storyshots ReceiptList Snoozed Case List with an open details accordion 1`] = `
<table
  className="usa-table usa-table--borderless width-full"
>
  <thead>
    <tr>
      <th
        className="min"
      >
        
      </th>
      <th>
        Receipt Number
      </th>
      <th>
        Application Reason
      </th>
      <th>
        Platform
      </th>
      <th>
        Problem
      </th>
      <th>
        Snoozed
      </th>
      <th>
        Assigned
      </th>
      <th>
        SN Ticket #
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-plus fa-w-14 "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="https://example.com/FKE5381523"
          target="_elis_viewer"
        >
          FKE5381523
        </a>
         
        <svg
          aria-hidden="true"
          aria-label="Snooze expired - Please review case"
          className="svg-inline--fa fa-exclamation-triangle fa-w-18 text-accent-warm"
          data-icon="exclamation-triangle"
          data-place="right"
          data-prefix="fas"
          data-tip={true}
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <div
          className="__react_component_tooltip place-top type-dark "
          data-id="tooltip"
        >
          Snooze expired - Please review case
        </div>
      </td>
      <td>
        Boredom
      </td>
      <td>
        Legacy
      </td>
      <td>
        Just Because
      </td>
      <td>
        1 day
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
    <tr>
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-plus fa-w-14 "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="https://example.com/FKE8206743"
          target="_elis_viewer"
        >
          FKE8206743
        </a>
      </td>
      <td>
        Enthusiasm
      </td>
      <td>
        SP
      </td>
      <td>
        Just Because
      </td>
      <td>
        1 day
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
    <tr
      className="row--show-details"
    >
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-minus fa-w-14 "
            data-icon="minus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="https://example.com/FKE123123"
          target="_elis_viewer"
        >
          FKE123123
        </a>
      </td>
      <td>
        Enthusiasm
      </td>
      <td>
        SP
      </td>
      <td>
        Just Because
      </td>
      <td>
        1 day
      </td>
      <td>
        
      </td>
      <td>
        <a
          href="http://localhost:1111/12345"
          rel="noopener noreferrer"
          target="_blank"
        >
          12345
        </a>
        <br />
      </td>
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
    <tr
      className="row--detail-display"
    >
      <td
        colSpan={1}
      />
      <td
        colSpan={8}
      >
        <h3>
          Case Details
        </h3>
        <p>
          No case details.
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots ReceiptList Tabular Cases-to-Work List with some items 1`] = `
<table
  className="usa-table usa-table--borderless width-full"
>
  <thead>
    <tr>
      <th
        className="min"
      >
        
      </th>
      <th>
        Receipt Number
      </th>
      <th>
        Application Reason
      </th>
      <th>
        Case Status
      </th>
      <th>
        Case Substatus
      </th>
      <th>
        Platform
      </th>
      <th>
        Assigned
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-plus fa-w-14 "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="https://example.com/FKE5381523"
          target="_elis_viewer"
        >
          FKE5381523
        </a>
         
        <svg
          aria-hidden="true"
          aria-label="Snooze expired - Please review case"
          className="svg-inline--fa fa-exclamation-triangle fa-w-18 text-accent-warm"
          data-icon="exclamation-triangle"
          data-place="right"
          data-prefix="fas"
          data-tip={true}
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <div
          className="__react_component_tooltip place-top type-dark "
          data-id="tooltip"
        >
          Snooze expired - Please review case
        </div>
      </td>
      <td>
        Boredom
      </td>
      <td>
        Pending
      </td>
      <td>
        Printing
      </td>
      <td>
        Legacy
      </td>
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Snooze
        </button>
      </td>
    </tr>
    <tr>
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-plus fa-w-14 "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="https://example.com/FKE8206743"
          target="_elis_viewer"
        >
          FKE8206743
        </a>
      </td>
      <td>
        Enthusiasm
      </td>
      <td>
        Eschewing Obfuscation
      </td>
      <td>
        Amazingly Successful
      </td>
      <td>
        SP
      </td>
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Snooze
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots ReceiptList Tabular Cases-to-Work List with some items; boolean SP 1`] = `
<table
  className="usa-table usa-table--borderless width-full"
>
  <thead>
    <tr>
      <th
        className="min"
      >
        
      </th>
      <th>
        Receipt Number
      </th>
      <th>
        Application Reason
      </th>
      <th>
        Case Status
      </th>
      <th>
        Case Substatus
      </th>
      <th>
        Platform
      </th>
      <th>
        Assigned
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-plus fa-w-14 "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="https://example.com/FKE5381523"
          target="_elis_viewer"
        >
          FKE5381523
        </a>
         
        <svg
          aria-hidden="true"
          aria-label="Snooze expired - Please review case"
          className="svg-inline--fa fa-exclamation-triangle fa-w-18 text-accent-warm"
          data-icon="exclamation-triangle"
          data-place="right"
          data-prefix="fas"
          data-tip={true}
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <div
          className="__react_component_tooltip place-top type-dark "
          data-id="tooltip"
        >
          Snooze expired - Please review case
        </div>
      </td>
      <td />
      <td />
      <td />
      <td>
        Legacy
      </td>
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Snooze
        </button>
      </td>
    </tr>
    <tr>
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-plus fa-w-14 "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="https://example.com/FKE8206743"
          target="_elis_viewer"
        >
          FKE8206743
        </a>
      </td>
      <td />
      <td />
      <td />
      <td>
        SP
      </td>
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Snooze
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots ReceiptList Tabular Snoozed Case List with some items 1`] = `
<table
  className="usa-table usa-table--borderless width-full"
>
  <thead>
    <tr>
      <th
        className="min"
      >
        
      </th>
      <th>
        Receipt Number
      </th>
      <th>
        Application Reason
      </th>
      <th>
        Platform
      </th>
      <th>
        Problem
      </th>
      <th>
        Snoozed
      </th>
      <th>
        Assigned
      </th>
      <th>
        SN Ticket #
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-plus fa-w-14 "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="https://example.com/FKE5381523"
          target="_elis_viewer"
        >
          FKE5381523
        </a>
         
        <svg
          aria-hidden="true"
          aria-label="Snooze expired - Please review case"
          className="svg-inline--fa fa-exclamation-triangle fa-w-18 text-accent-warm"
          data-icon="exclamation-triangle"
          data-place="right"
          data-prefix="fas"
          data-tip={true}
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <div
          className="__react_component_tooltip place-top type-dark "
          data-id="tooltip"
        >
          Snooze expired - Please review case
        </div>
      </td>
      <td>
        Boredom
      </td>
      <td>
        Legacy
      </td>
      <td>
        Just Because
      </td>
      <td>
        1 day
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
    <tr>
      <td
        className="min"
      >
        <button
          className="usa-button usa-button--none"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-plus fa-w-14 "
            data-icon="plus"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </td>
      <td>
        <a
          href="https://example.com/FKE8206743"
          target="_elis_viewer"
        >
          FKE8206743
        </a>
      </td>
      <td>
        Enthusiasm
      </td>
      <td>
        SP
      </td>
      <td>
        Just Because
      </td>
      <td>
        1 day
      </td>
      <td />
      <td />
      <td>
        <button
          className="usa-button usa-button--outline"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Update
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots SnoozeForm Basic snooze form 1`] = `
<form
  className="usa-form"
>
  <label
    className="usa-label"
    htmlFor="snoozeReason"
  >
    Reason to snooze this case:
  </label>
  <select
    className="usa-select"
    id="snoozeReason"
    name="snoozeReason"
    onChange={[Function]}
    required={true}
    value="test_data"
  >
    <option
      disabled={true}
      hidden={true}
      value=""
    >
      - Select Reason -
    </option>
    <option
      value="test_data"
    >
      Test Data - should be deleted
    </option>
    <option
      value="assigned_case"
    >
      Case has been assigned - remind me later
    </option>
    <option
      value="in_proceedings"
    >
      Case is pending removal proceedings - check back later
    </option>
    <option
      value="fo_referral"
    >
      Stuck at field office - awaiting response
    </option>
    <option
      value="technical_issue"
    >
      Technical Issue - awaiting resolution through ServiceNow
    </option>
    <option
      value="bcu"
    >
      Referral to BCU or CFDO
    </option>
  </select>
  <label
    className="usa-label"
    htmlFor="caseIssueNotes"
  >
    Case Issue Notes
  </label>
  <textarea
    className="usa-textarea"
    id="caseIssueNotes"
    name="caseIssueNotes"
    onChange={[Function]}
    value=""
  />
  <button
    className="usa-button"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Snooze for 365 days
  </button>
</form>
`;

exports[`Storyshots UsaAlert Success 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--success usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      Well done!
       
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert dismissible 1`] = `
<div>
  <div
    className="usa-alert--fit-content usa-alert usa-alert--success usa-alert--slim"
  >
    <div
      className="usa-alert__body"
    >
      <p
        className="usa-alert__text"
      >
        This is a success alert.
         
        <button
          onClick={[Function]}
        >
          Dismiss
        </button>
      </p>
    </div>
  </div>
  <div
    className="usa-alert--fit-content usa-alert usa-alert--warning usa-alert--slim"
  >
    <div
      className="usa-alert__body"
    >
      <p
        className="usa-alert__text"
      >
        This is a warning alert.
         
        <button
          onClick={[Function]}
        >
          Dismiss
        </button>
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots UsaAlert info 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--info usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      This is some information.
       
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert warning 1`] = `
<div
  className="usa-alert--fit-content usa-alert usa-alert--warning usa-alert--slim"
>
  <div
    className="usa-alert__body"
  >
    <p
      className="usa-alert__text"
    >
      Watch out for this!
       
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaButton Secondary button 1`] = `
<button
  className="usa-button usa-button--secondary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Submit
</button>
`;

exports[`Storyshots UsaSelect Select 1`] = `
<select
  className="usa-select"
  id="name"
  name="name"
  onChange={[Function]}
  required={true}
  value="X"
>
  <option
    disabled={true}
    hidden={true}
    value=""
  >
    placeholder
  </option>
  <option
    value="X"
  >
    x
  </option>
  <option
    value="Y"
  >
    y
  </option>
  <option
    value="Z"
  >
    z
  </option>
</select>
`;
